[tool.poetry]
name = "transformer"
version = "0.1.0"
description = "Transformer package"
authors = ["Yoshihiro Ando"]
license = "MIT"

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

